@@ -13,7 +13,8 @@ all necessary callbacks, but it's still capable to work as initiator
 only. Mode, when a host acts as the initiator and the target
 simultaneously, is supported as well.
 
-This version is compatible with SCST core version 1.0.0 and higher.
+This version is compatible with SCST core version 1.0.0 and higher and
+Linux kernel 2.6.16 and higher.
 
 The original initiator driver was taken from the kernel 2.6.17.8.
 
